# meetscope

./: .gitignore  docker-compose.yml
docs/: EVENT-CONTRACT.md
docs/decisions/: ADR-0001-libreria-transcripcion.md
experiments/whisper-eval/: README.md  common.py  pyproject.toml  run_faster_whisper.py  run_whisperx.py
experiments/whisper-eval/results/faster-whisper/: metrics.json  segments.json  transcript.txt
experiments/whisper-eval/results/whisperx/: metrics.json  segments.json  transcript.txt
infra/: README.md
infra/postgres/: init.sql
schemas/: README.md
schemas/avro/: audio-uploaded.avsc  enrichment-completed.avsc  indexing-completed.avsc  transcript-created.avsc
schemas/examples/: transcript-created.example.json
scripts/: register_schemas.py
services/ingest-service/: pom.xml
services/ingest-service/src/main/java/app/fepdev/ingest_service/: IngestServiceApplication.java
services/ingest-service/src/main/java/app/fepdev/ingest_service/config/: AppProperties.java  MinioConfig.java
services/ingest-service/src/main/java/app/fepdev/ingest_service/domain/: Job.java  JobRepository.java  JobStatus.java
services/ingest-service/src/main/java/app/fepdev/ingest_service/messaging/: AudioUploadedPublisher.java
services/ingest-service/src/main/java/app/fepdev/ingest_service/service/: JobService.java
services/ingest-service/src/main/resources/: application.yml
services/ingest-service/src/test/java/app/fepdev/ingest_service/: IngestServiceApplicationTests.java
services/transcription-worker/: pyproject.toml
(+4 files in other folders)
