[project]
name = "transcription-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.14.2",
    "fastavro>=1.12.2",
    "faster-whisper>=1.2.1",
    "minio>=7.2.20",
    "psycopg[binary]>=3.3.4",
]
